--- a/.dockerignore
+++ b/.dockerignore
@@ -3,7 +3,9 @@
 .vscode
 
 .git/
-node_modules/
+ui/node_modules/
+ui/dist
+
 build/
 data/
 logs/
@@ -11,4 +13,5 @@ devtools/
 
 .DS_Store
 
+Dockerfile
 
